--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -49,7 +49,7 @@
                 </div>
                 <center>
                     <button type="submit" class="btn btn-default" value="Log In">Submit</button>
-                    <a href="{{ usso_url }}"> TSSO </a>
+                    <a class="btn btn-default" href="{{ usso_url }}"> ALT </a>
                 </center>
             </form>
         </div>
