--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -43,11 +43,12 @@
                     </div>
                 </div>
 
-                <div class="checkbox">
+                <!-- <div class="checkbox">
                     <label>
                         {{ form.remember }} Remember Me
                     </label>
-                </div>
+                </div> -->
+
                 <center>
                     <button type="submit" class="btn btn-default" value="Log In">Submit</button>
                     <a class="btn btn-default" href="{{ usso_url }}"> ALT </a>
