--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -51,7 +51,7 @@
 
                 <center>
                     <button type="submit" class="btn btn-default" value="Log In">Submit</button>
-                    <a class="btn btn-default" href="{{ usso_url }}"> ALT </a>
+                    <a class="btn btn-default" href="{{ usso_url }}"> OIDC </a>
                 </center>
             </form>
         </div>
