--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -63,7 +63,7 @@
 
         <div class="col-md-6 col-md-pull-6 text-center">
             <h1 style="font-size: 70px;">IITB</h1>
-            <h3 style="color: #140396">Single Sign-on</h3>
+            <h3 style="color: #140396">Gymkhana Profiles</h3>
         </div>
     </div>
 
