--- a/templates/sso/index.html
+++ b/templates/sso/index.html
@@ -3,9 +3,9 @@
 {% block featurette %}
     <main class="masthead" role="main">
         <div class="container" style="color: #ffffff">
-            <h1 style="font-size: 110px;">SSO for IITB</h1>
+            <h1 style="font-size: 110px;">IITB Profiles</h1>
             <p style="font-size: 30px; margin-bottom: 40px;">
-                SSO for IITB is an OAuth/Proxy built on IITB LDAP/SSO. It provides a secure and flexible
+                Profiles is an OAuth2 provider built on IITB LDAP/SSO. It provides a secure and flexible
                 authorization framework for applications requiring authentication.
             </p>
             <div class="row" style="padding: 32px">
