Fix HTML of widget

--- a/templates/widget/login.html
+++ b/templates/widget/login.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<html>
 <head>
     <title>Login Widget</title>
     <style>
@@ -77,4 +79,7 @@
     {% endif %}
 {% endwith %}
 
+</script>
+
 </body>
+</html>
