Django library update

--- a/templates/sso/doc_includes/library.html
+++ b/templates/sso/doc_includes/library.html
@@ -9,10 +9,16 @@
     The documentation is present <a href="http://bijoysingh.github.io/IITB-OAuth-PHP/" target="_blank">here</a>
 </p>
 
+<h3>Django</h3>
+
+<p class="doc">
+    <a href="https://github.com/nautatva/iitb_oauth/" target="_blank">This repo</a> has the source code for django
+    library. The pypi release is present <a href="https://pypi.org/project/iitb-oauth/" target="_blank">here</a>
+</p>
+
 <h3>Python</h3>
 
 <p class="doc">
-    Python library is maintained <a href="https://github.com/DheerendraRathor/iitb_oauth_py"
-                                    target="_blank">here</a>. This is currently in alpha version
+    Python library is maintained <a href="https://github.com/DheerendraRathor/iitb_oauth_py" target="_blank">here</a>.
+    This is currently in alpha version
 </p>
-
