[HUGE] Upgrade to Django 3

--- a/templates/oauth2_provider/authorize.html
+++ b/templates/oauth2_provider/authorize.html
@@ -1,33 +1,6 @@
-<!--
-                                             _______________________
-   _______________________-------------------                       `\
- /:--__                                                              |
-||< > |                                   ___________________________/
-| \__/_________________-------------------                         |
-|                                                                  |
- |                       THE LORD OF THE RINGS                      |
- |                                                                  |
- |      "Three Rings for the Elven-kings under the sky,             |
-  |        Seven for the Dwarf-lords in their halls of stone,        |
-  |      Nine for Mortal Men doomed to die,                          |
-  |        One for the Dark Lord on his dark throne                  |
-  |      In the Land of Mordor where the Shadows lie.                 |
-   |       One Ring to rule them all, One Ring to find them,          |
-   |       One Ring to bring them all and in the darkness bind them   |
-   |     In the Land of Mordor where the Shadows lie.                |
-  |                                              ____________________|_
-  |  ___________________-------------------------                      `\
-  |/`--_                                                                 |
-  ||[ ]||                                            ___________________/
-   \===/___________________--------------------------
-
-    A quote from one of my favourite books: The Lord of the Rings by J. R. R. Tolkien
-
-    Ascii Art taken from http://www.asciiworld.com/-Lord-of-the-Rings-.html
--->
 {% extends "sso/logged_in.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 {% load scope %}
 
 {% block title %}
@@ -71,7 +44,6 @@
                 <h3>{% trans "Application requires following permissions" %}</h3>
 
                 <ul class="list-unstyled">
-
                     {% with zipped_scopes_description=scopes|zip:scopes_descriptions %}
                         {% for scope, description in zipped_scopes_description|get_basic_scope:application %}
                             <li>
@@ -85,6 +57,8 @@
                                 </div>
                             </li>
                         {% endfor %}
+                    {% endwith %}
+                    {% with zipped_scopes_description=scopes|zip:scopes_descriptions %}
                         {% for scope, description in zipped_scopes_description|remove_basic_scope:application %}
                             <li>
                                 <div class="checkbox">
