--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -33,25 +33,18 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group {% if form.username.errors or form.non_field_errors %} has-error {% endif %}">
-                            {{ form.username }}
+			    <input id="username" class="form-control" type="text" name="httpd_username" value="" placeholder="LDAP Username" />
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group{% if form.password.errors or form.non_field_errors %} has-error {% endif %}">
-                            {{ form.password }}
+			    <input id="password" class="form-control" type="password" name="httpd_password" value="" placeholder="Enter Password" />
                         </div>
                     </div>
                 </div>
 
-                <!-- <div class="checkbox">
-                    <label>
-                        {{ form.remember }} Remember Me
-                    </label>
-                </div> -->
-
                 <center>
-                    <button type="submit" class="btn btn-default" value="Log In">Submit</button>
-                    <a class="btn btn-default" href="{{ usso_url }}"> OIDC </a>
+                    <button type="submit" class="btn btn-default" value="Login">Submit</button>
                 </center>
             </form>
         </div>
