--- a/templates/oauth2_provider/application_detail.html
+++ b/templates/oauth2_provider/application_detail.html
@@ -1,6 +1,6 @@
 {% extends "sso/logged_in.html" %}
 {% load i18n %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}
     {{ application.name }} - Application
