Add SSO warning

--- a/templates/sso/5-minutes-doc.html
+++ b/templates/sso/5-minutes-doc.html
@@ -16,9 +16,16 @@
         <a href="https://tools.ietf.org/html/rfc6749" target="_blank">RFC 6749</a> for OAuth 2.0</h4>
     <h4><a href="http://tutorials.jenkov.com/oauth2/index.html" target="_blank">Here</a> is a nice tutorial for OAuth
         2.0</h4>
-    <h4>General discussion regarding implementation is handled on google group
-        <a href="https://groups.google.com/forum/#!forum/iitb-sso" target="_blank">IITB SSO</a>. If you're devleoping
-        with SSO, please join the group for queries and discussion</h4>
+    <h3 style="color: red">
+        <b>IMPORTANT: READ BELOW BEFORE CONTINUING!!!</b> <br/> <br/>
+
+        Profiles is intended to be used only by applications running on the server infrastructure
+        of IIT Bombay Students' Gymkhana. If your application does not run on Gymkhana servers, DO NOT use Profiles, and
+	check Computer Center's website for details on developing applications with IITB SSO integration. <br/><br/>
+
+        If the above condition is not satisfied, your application may be deleted and your account blocked from
+	Gymkhana services without prior notice. For any details, contact mlc@iitb.ac.in
+    </h3>
 
     <ul id="tabs" class="nav nav-tabs" role="tablist" style="margin-top: 25px;">
         {% for tab in tabs %}
