--- a/templates/sso/index.html
+++ b/templates/sso/index.html
@@ -5,8 +5,7 @@
         <div class="container" style="color: #ffffff">
             <h1 style="font-size: 110px;">Profiles</h1>
             <p style="font-size: 30px; margin-bottom: 40px;">
-                OAuth2 provider/proxy built on IIT Bombay LDAP/SSO. It provides a secure and flexible
-                authorization framework for applications requiring authentication.
+                OAuth2 proxy built on IIT Bombay SSO for services on Students' Gymkhana
             </p>
             <div class="row" style="padding: 32px">
                 <div class="col-md-6 form-group">
