--- a/templates/oauth2_provider/authorize.html
+++ b/templates/oauth2_provider/authorize.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block body %}
+    {% with max_users_unverified=10 %}
     {% if not application.is_verified %}
     <div class="center-block" style="color: red">
         <h2>
@@ -23,11 +24,20 @@
 
             <br/> <br/>
             If you are the developer of this application, contact mlc@iitb.ac.in for verifiation.
-            Note that only applications running on Gymkhana servers are eligible.
+            Note that only applications running on Gymkhana servers are eligible and
+            unverified applications can have a maximum of {{ max_users_unverified }} users.
         </div>
     </div>
     {% endif %}
 
+    {% if not application.is_verified and application.get_user_count >= max_users_unverified %}
+    <div class="center-block" style="color: red">
+        <h4>
+            This unverified application ({{ application.name }}) has reached the maximum number of allowed users.
+            The application must be verified for further use.
+        </h4>
+    </div>
+    {% else %}
     <div class="center-block">
         {% if not error %}
             <form id="authorizationForm" method="post">
@@ -116,6 +126,9 @@
             <p>{{ error.description }}</p>
         {% endif %}
     </div>
+    {% endif %}
+    {% endwith %}
+
 {% endblock %}
 
 {% block jsLinks %}
