Add institutional LDAP clause

--- a/templates/sso/doc_includes/policy.html
+++ b/templates/sso/doc_includes/policy.html
@@ -1,7 +1,7 @@
 <h3>Gymkhana Profiles Policy</h3>
 
 <p class="doc">
-    <ol>
+    <ol class="doc">
         <li>
             Gymkhana Profiles is intended to be used ONLY by applications built by students
             and hosted in the server infrastructure of IIT Bombay Gymkhana
@@ -20,6 +20,11 @@
         <li>
             To get your application verified, write an email to mlc@iitb.ac.in. Computer Center or MLC
             may require specific compliances and/or documents before your application is verified.
+        </li>
+        <li>
+            Only applications created with an institutional LDAP ID will be verified. Existing
+            applications can be transferred upon request to another account. If no relevant institutional
+            LDAP ID exists, the application must be transferred to MLC.
         </li>
         <li>
             In case of any dispute, the decision of Head, Computer Center and Dean of Student Affairs
