Add policy change clause

--- a/templates/sso/doc_includes/policy.html
+++ b/templates/sso/doc_includes/policy.html
@@ -30,5 +30,8 @@
             In case of any dispute, the decision of Head, Computer Center and Dean of Student Affairs
             shall be final and binding.
         </li>
+        <li>
+            This policy may be altered by Computer Center without prior notification.
+        </li>
     </ol>
 </p>
