--- a/templates/oauth2_provider/application_list.html
+++ b/templates/oauth2_provider/application_list.html
@@ -12,7 +12,7 @@
             <ul class="list-group">
                 {% for application in applications %}
                     <li class="list-group-item">
-                        <a href="{{ application.get_absolute_url }}">{{ application.name }}</a>
+                        <a href="{{ application.get_absolute_url }}">{{ application.name }}{% if application.is_verified %} (Verified){% endif %}</a>
                         <span class="badge" title="users" data-toggle="tooltip" data-placement="right">{{ application.get_user_count }}</span>
                     </li>
                 {% endfor %}
