--- a/templates/oauth2_provider/authorize.html
+++ b/templates/oauth2_provider/authorize.html
@@ -30,7 +30,20 @@
     </div>
     {% endif %}
 
-    {% if not application.is_verified and application.get_user_count >= max_users_unverified %}
+    {% if application.is_beta %}
+    <div class="center-block" style="color: red">
+        <h2>
+            Public Beta
+        </h2>
+        <div>
+            The application you are trying to authorize is still under development.
+            Features may be broken and things may not work as expected.
+            Proceed with caution.
+        </div>
+    </div>
+    {% endif %}
+
+    {% if not application.is_verified and not application.is_beta and application.get_user_count >= max_users_unverified %}
     <div class="center-block" style="color: red">
         <h4>
             This unverified application ({{ application.name }}) has reached the maximum number of allowed users.
