--- a/templates/oauth2_provider/authorize.html
+++ b/templates/oauth2_provider/authorize.html
@@ -9,7 +9,7 @@
 
 {% block body %}
     {% with max_users_unverified=10 %}
-    {% if not application.is_verified %}
+    {% if application and not application.is_verified %}
     <div class="center-block" style="color: red">
         <h2>
             Unverified Application
@@ -43,7 +43,7 @@
     </div>
     {% endif %}
 
-    {% if not application.is_verified and not application.is_beta and application.get_user_count >= max_users_unverified %}
+    {% if application and not application.is_verified and not application.is_beta and application.get_user_count >= max_users_unverified %}
     <div class="center-block" style="color: red">
         <h4>
             This unverified application ({{ application.name }}) has reached the maximum number of allowed users.
