Minor spelling fix

--- a/templates/oauth2_provider/authorize.html
+++ b/templates/oauth2_provider/authorize.html
@@ -23,7 +23,7 @@
             </b>
 
             <br/> <br/>
-            If you are the developer of this application, contact mlc@iitb.ac.in for verifiation.
+            If you are the developer of this application, contact mlc@iitb.ac.in for verification.
             Note that only applications running on Gymkhana servers are eligible and
             unverified applications can have a maximum of {{ max_users_unverified }} users.
         </div>
